%% Рисунок 2.4 — Логическая модель данных (ключевые сущности и связи)
%% Нотация: ER Diagram (Crow's Foot, адаптировано в Mermaid)
erDiagram
    USERS ||--o{ USER_ROLES : "user_id"
    ROLES ||--o{ USER_ROLES : "role_id"
    ROLES ||--o{ ROLE_PERMISSIONS : "role_id"
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : "permission_id"
    DIC_EQUIPMENT_STATUS ||--o{ EQUIPMENT : "status_id"
    USERS ||--o{ EQUIPMENT : "responsible_user_id"
    LOCATIONS ||--o{ EQUIPMENT : "location_id"
    EQUIPMENT ||--o{ EQUIP_HISTORY : "equipment_id"
    EQUIPMENT ||--o{ PART_CHAR_VALUES : "equipment_id"
    SPR_PARTS ||--o{ PART_CHAR_VALUES : "part_id"
    SPR_CHARS ||--o{ PART_CHAR_VALUES : "char_id"
    DIC_TASK_STATUS ||--o{ TASKS : "status_id"
    USERS ||--o{ TASKS : "requester_id"
    USERS ||--o{ TASKS : "executor_id"
    TASKS ||--o{ TASK_HISTORY : "task_id"
    TASKS ||--o{ TASK_EQUIPMENT : "task_id"
    EQUIPMENT ||--o{ TASK_EQUIPMENT : "equipment_id"
    TASKS ||--o{ TASK_ATTACHMENTS : "task_id"
    DESK_ATTACHMENTS ||--o{ TASK_ATTACHMENTS : "attachment_id"
    USERS ||--o{ AUDIT_EVENTS : "actor_id"
